--- a/src/app/css/app.scss
+++ b/src/app/css/app.scss
@@ -10,3 +10,55 @@
 body {
     min-height: 100vh;
 }
+
+.fixed {
+    position: fixed;
+}
+
+.absolute {
+    position: absolute;
+}
+
+.fixed-top {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+.absolute-top {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+.fixed-bottom {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.gray-y-scrollbar {
+    $radius: 40px;
+
+    overflow-y: auto;
+    overflow-x: hidden;
+
+    &::-webkit-scrollbar {
+        width: 4px;
+        background: $gray-4;
+
+        border-radius: $radius;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: $gray-7;
+        border-radius: $radius;
+    }
+}
