--- a/src/app/css/variables.scss
+++ b/src/app/css/variables.scss
@@ -2,3 +2,17 @@ $primary: blue;
 
 $primary-page-bg: #fff3e4;
 $primary-text-color: #54372a;
+
+$gray-10: #18181b;
+$gray-9: #27272a;
+$gray-8: #3f3f46;
+$gray-7: #52525b;
+$gray-6: #71717a;
+$gray-5: #a1a1aa;
+$gray-4: #d4d4d8;
+$gray-3: #e4e4e7;
+$gray-2: #f4f4f5;
+$gray-1: #fafafa;
+
+$header-height: 101px;
+$footer-height: 252px;
