--- a/src/app/css/app.scss
+++ b/src/app/css/app.scss
@@ -11,6 +11,19 @@ body {
     min-height: 100vh;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.flex {
+    display: flex;
+}
+
+.max-content {
+    width: max-content;
+}
+
 .fixed {
     position: fixed;
 }
@@ -42,6 +55,14 @@ body {
 
 .text-center {
     text-align: center;
+}
+
+.pointer {
+    cursor: pointer;
+}
+
+.text-primary {
+    color: $primary-text-color;
 }
 
 .gray-y-scrollbar {
