--- a/src/app/css/fonts.scss
+++ b/src/app/css/fonts.scss
@@ -55,3 +55,10 @@
     font-weight: 400;
     color: $primary-text-color;
 }
+
+.text-card-title {
+    font-family: 'Better-Together-Caps';
+    font-size: 2.25rem;
+    font-weight: 400;
+    color: $primary-text-color;
+}
