--- a/src/app/css/app.scss
+++ b/src/app/css/app.scss
@@ -20,14 +20,28 @@ a {
     max-width: 100%;
     width: 100%;
 }
+.h-100p {
+    max-height: 100%;
+    height: 100%;
+}
 
 .flex {
     display: flex;
 }
 
+.items-center {
+    display: flex;
+    align-items: center;
+}
+
 .justify-center {
     display: flex;
     justify-content: center;
+}
+
+.justify-between {
+    display: flex;
+    justify-content: space-between;
 }
 
 .max-content {
@@ -83,12 +97,19 @@ a {
     margin-bottom: 16px;
 }
 
+.mt-32 {
+    margin-top: 32px;
+}
+
 .mb-32 {
     margin-bottom: 32px;
 }
 
 .mb-64 {
     margin-bottom: 64px;
+}
+.mt-68 {
+    margin-top: 68px;
 }
 
 .mt-120 {
