--- a/src/app/css/app.scss
+++ b/src/app/css/app.scss
@@ -97,6 +97,13 @@ a {
     margin-bottom: 16px;
 }
 
+.mt-24 {
+    margin-top: 24px;
+}
+.mb-24 {
+    margin-bottom: 24px;
+}
+
 .mt-32 {
     margin-top: 32px;
 }
@@ -115,6 +122,7 @@ a {
 .mt-120 {
     margin-top: 120px;
 }
+
 .mb-120 {
     margin-bottom: 120px;
 }
